deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
      - image: quay.io/cbanavik/go-server:latest
        name: go-server
        ports:
        - containerPort: 8080
