service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: go-server
